--- a/portfolio/src/app/utils/download/download.component.html
+++ b/portfolio/src/app/utils/download/download.component.html
@@ -1,14 +1,32 @@
-<a href="CV-AgustinaCasarone-English-SEP2024.pdf" download="{{ fileName }}" >
-  <svg xmlns="http://www.w3.org/2000/svg"
-  (click)="onDownload()"
-  fill="none"
-  viewBox="0 0 24 24"
-  stroke-width="1.5"
-  stroke="currentColor"
-  class="size-6">
-    <path
-    stroke-linecap="round"
-    stroke-linejoin="round"
-    d="M3 16.5v2.25A2.25 2.25 0 0 0 5.25 21h13.5A2.25 2.25 0 0 0 21 18.75V16.5M16.5 12 12 16.5m0 0L7.5 12m4.5 4.5V3" />
-  </svg>
-</a>
+<div class="tooltip-container">
+  <button (click)="isDownloading = !isDownloading">
+    <svg xmlns="http://www.w3.org/2000/svg"
+    fill="none"
+    viewBox="0 0 24 24"
+    stroke-width="1.5"
+    stroke="currentColor"
+    class="size-6">
+      <path
+      stroke-linecap="round"
+      stroke-linejoin="round"
+      d="M3 16.5v2.25A2.25 2.25 0 0 0 5.25 21h13.5A2.25 2.25 0 0 0 21 18.75V16.5M16.5 12 12 16.5m0 0L7.5 12m4.5 4.5V3" />
+    </svg>
+  </button>
+
+  @if (isDownloading) {
+    <ul class="language-toggle-list tooltip">
+      <li class="language-button">
+        <a
+        href="assets/files/CV-AGUSTINA-CASARONE-oct24-es.pdf"
+        download="CV-AGUSTINA-CASARONE-oct24-es.pdf"
+        style="width: 3rem;">Español</a>
+      </li>
+      <li class="language-button">
+        <a
+        href="assets/files/CV-AGUSTINA-CASARONE-oct24-en.pdf"
+        download="CV-AGUSTINA-CASARONE-oct24-en.pdf"
+        style="width: 3rem;">English</a>
+      </li>
+    </ul>
+  }
+  </div>
