--- a/portfolio/src/app/layouts/main-layout/main-layout.component.html
+++ b/portfolio/src/app/layouts/main-layout/main-layout.component.html
@@ -1,4 +1,4 @@
 <div class="portfolio-body">
   <portfolio-body></portfolio-body>
 </div>
-<portfolio-footer></portfolio-footer>
+<portfolio-footer class="portfolio-footer"></portfolio-footer>
