--- a/portfolio/src/app/layouts/footer/footer.component.html
+++ b/portfolio/src/app/layouts/footer/footer.component.html
@@ -1,1 +1,1 @@
-<p>footer works!</p>
+<p class="footer">© {{ personalInfoDetail.firstName | translate }} {{ personalInfoDetail.lastName | translate }} | {{ personalInfoDetail.role | translate }}</p>
