--- a/portfolio/src/app/utils/download/download.component.html
+++ b/portfolio/src/app/utils/download/download.component.html
@@ -1,5 +1,6 @@
 <div class="tooltip-container">
   <button (click)="isDownloading = !isDownloading">
+    <span class="sr-only">{{ 'UI.buttons.download' | translate }}</span>
     <svg xmlns="http://www.w3.org/2000/svg"
     fill="none"
     viewBox="0 0 24 24"
