--- a/portfolio/src/app/views/education/education.component.html
+++ b/portfolio/src/app/views/education/education.component.html
@@ -1,5 +1,5 @@
 <professional-title
-  [title]="'EDUCATION'"
+  [title]="'UI.block_titles.education' | translate"
   (toggle)="onToggle($event)"
 />
 
