--- a/portfolio/src/app/views/experiences/experiences.component.html
+++ b/portfolio/src/app/views/experiences/experiences.component.html
@@ -1,5 +1,5 @@
 <professional-title
-  [title]="'EXPERIENCE'"
+[title]="'UI.block_titles.experience' | translate"
   (toggle)="onToggle($event)"
 />
 
