--- a/portfolio/src/app/views/knowledge/knowledge.component.html
+++ b/portfolio/src/app/views/knowledge/knowledge.component.html
@@ -1,4 +1,4 @@
 <personal-block
-  [title]="'Knowledge'"
+  [title]="'UI.misc_titles.knowledge' | translate"
   [stringList]="parseKnowledgeListToStringList(knowledgeList)"
 />
