--- a/portfolio/src/app/views/presentation/presentation.component.html
+++ b/portfolio/src/app/views/presentation/presentation.component.html
@@ -1,5 +1,5 @@
 <professional-title
-  [title]="'WHO AM I'"
+  [title]="'UI.block_titles.who_am_i' | translate"
   (toggle)="onToggle($event)"
 />
 
