--- a/portfolio/src/app/views/projects/projects.component.html
+++ b/portfolio/src/app/views/projects/projects.component.html
@@ -1,5 +1,5 @@
 <professional-title
-  [title]="'PROJECTS'"
+  [title]="'UI.block_titles.projects' | translate"
   (toggle)="onToggle($event)"
 />
 
