--- a/portfolio/src/app/views/skills/skills.component.html
+++ b/portfolio/src/app/views/skills/skills.component.html
@@ -1,5 +1,5 @@
 <professional-title
-  [title]="'MY SKILLS'"
+  [title]="'UI.block_titles.my_skills' | translate"
   (toggle)="onToggle($event)"
 />
 
