--- a/portfolio/src/app/views/social/social.component.html
+++ b/portfolio/src/app/views/social/social.component.html
@@ -1,5 +1,5 @@
 <div class="personal-info-block">
-  <h3>Social Media</h3>
+  <h3>{{ 'UI.misc_titles.social_media' | translate}}</h3>
 
   <ul class="personal-list">
     @for (social of socialMediaList; track $index) {
