--- a/portfolio/src/app/utils/language/language.component.html
+++ b/portfolio/src/app/utils/language/language.component.html
@@ -1,5 +1,6 @@
 <div class="tooltip-container">
 <button (click)="isTranslating = !isTranslating">
+  <span class="sr-only">{{ 'UI.buttons.translate' | translate }}</span>
   <svg
   xmlns="http://www.w3.org/2000/svg"
   fill="none"
