fix: UI buttons

--- a/portfolio/src/app/utils/download/download.component.html
+++ b/portfolio/src/app/utils/download/download.component.html
@@ -1,5 +1,5 @@
 <div class="tooltip-container">
-  <button (click)="isDownloading = !isDownloading">
+  <button (click)="isDownloading = !isDownloading" class="place-content-center p-[0.15rem]">
     <span class="sr-only">{{ 'UI.buttons.download' | translate }}</span>
     <svg xmlns="http://www.w3.org/2000/svg"
     fill="none"
